Configuring static site generation1

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,7 @@
     "extends": ["next/core-web-vitals", "next", "prettier"],
     "plugins": ["prettier"],
     "rules": {
-      "@next/next/google-font-display": "off",
-      "prettier/prettier": ["error"]
+      "react/no-unescaped-entities": "off",
+      "@next/next/no-page-custom-font": "off"
     }
   }
